# rules_verilog

./: .bazelrc  .gitignore  404.html  BUILD.bazel  MODULE.bazel  README.md  index.html  print.html  searchindex.js  searchindex.json  system_rdl.html  toc.html  toc.js  verilator.html  verilog.html  version.bzl
.github/: release_notes.template
.github/workflows/: ci.yaml  compile-requirements.yaml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md
system_rdl/: BUILD.bazel  defs.bzl  system_rdl_info.bzl  system_rdl_library.bzl  system_rdl_toolchain.bzl  verilog_system_rdl_library.bzl
system_rdl/private/: BUILD.bazel  peakrdl_wrapper.py  system_rdl.bzl
system_rdl/private/tests/simple/: BUILD.bazel
system_rdl/private/tests/verilog_lib/: BUILD.bazel  verilog_system_rdl_library_test_suite.bzl
system_rdl/toolchain/: BUILD.bazel  peakrdl.toml
tools/requirements/: BUILD.bazel  requirements.in  requirements_linux_aarch64.txt  requirements_linux_x86_64.txt  requirements_macos_aarch64.txt  requirements_windows_x86_64.txt
tools/toolchains/: BUILD.bazel
verilator/: BUILD.bazel  defs.bzl  verilator_cc_library.bzl  verilator_lint_aspect.bzl  verilator_lint_test.bzl  verilator_toolchain.bzl
verilator/private/: BUILD.bazel  verilator_cc.bzl  verilator_lint.bzl  verilator_process_wrapper.cc  verilator_utils.bzl
verilator/private/tests/library_transitive_deps/: BUILD.bazel
verilator/private/tests/library_transitive_deps/d_register/: BUILD.bazel  d_register.sv
verilator/private/tests/library_transitive_deps/serial_to_parallel/: BUILD.bazel  serial_to_parallel.sv  serial_to_parallel_test.cc
verilator/private/tests/library_transitive_deps/shift_register/: BUILD.bazel  shift_register.sv
verilator/private/tests/lint_test/: BUILD.bazel  counter.sv  mux.sv  top_module.sv
verilator/toolchain/: BUILD.bazel
verilog/: BUILD.bazel  defs.bzl  verilog_info.bzl  verilog_library.bzl
