load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@rules_rust_mdbook//:defs.bzl", "mdbook", "mdbook_server")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

stardoc(
    name = "system_rdl",
    out = "src/system_rdl.md",
    input = "//system_rdl:defs.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//system_rdl:defs_bzl"],
)

stardoc(
    name = "verilator",
    out = "src/verilator.md",
    input = "//verilator:defs.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//verilator:defs_bzl"],
)

stardoc(
    name = "verilog",
    out = "src/verilog.md",
    input = "//verilog:defs.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    tags = ["manual"],
    deps = ["//verilog:defs_bzl"],
)

mdbook(
    name = "book",
    srcs = glob(["src/**/*.md"]) + [
        ":system_rdl",
        ":verilator",
        ":verilog",
    ],
    book = "book.toml",
    # Windows builds are typically super slow in CI so they're avoided.
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

alias(
    name = "docs",
    actual = ":book",
    tags = ["manual"],
)

mdbook_server(
    name = "server",
    book = ":book",
    tags = ["manual"],
)

sh_binary(
    name = "publish_book",
    srcs = ["publish_book.sh"],
    data = [":book"],
    env = {"BOOK_DIR": "$(rootpath :book)"},
    tags = ["manual"],
)
