load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "defs.bzl",
        "requirements.in",
        "system_rdl_info.bzl",
        "system_rdl_library.bzl",
        "system_rdl_toolchain.bzl",
        "verilog_system_rdl_library.bzl",
    ],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs_bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//system_rdl/private:bzl_lib",
        "//verilog:verilog_info_bzl",
    ],
)
