load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "defs.bzl",
    "verilator_cc_library.bzl",
    "verilator_lint_aspect.bzl",
    "verilator_lint_test.bzl",
    "verilator_toolchain.bzl",
])

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "verilator_cc_library_bzl",
    srcs = ["verilator_cc_library.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//verilator/private:bzl_lib"],
)

bzl_library(
    name = "verilator_toolchain_bzl",
    srcs = ["verilator_toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//verilator/private:bzl_lib"],
)

bzl_library(
    name = "verilator_lint_test_bzl",
    srcs = ["verilator_lint_test.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//verilator/private:bzl_lib"],
)

bzl_library(
    name = "verilator_lint_aspect_bzl",
    srcs = ["verilator_lint_aspect.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//verilator/private:bzl_lib"],
)

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":verilator_cc_library_bzl",
        ":verilator_lint_aspect_bzl",
        ":verilator_lint_test_bzl",
        ":verilator_toolchain_bzl",
    ],
)
