load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "defs.bzl",
    "verilog_info.bzl",
    "verilog_library.bzl",
])

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":verilog_info_bzl",
        ":verilog_library_bzl",
    ],
)

bzl_library(
    name = "verilog_library_bzl",
    srcs = ["verilog_library.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":verilog_info_bzl",
    ],
)

bzl_library(
    name = "verilog_info_bzl",
    srcs = ["verilog_info.bzl"],
    visibility = ["//visibility:public"],
)
