load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_venv//python:py_binary.bzl", "py_binary")
load(":system_rdl.bzl", "current_system_rdl_peakrdl_toolchain")

current_system_rdl_peakrdl_toolchain(
    name = "current_system_rdl_peakrdl_toolchain",
)

py_binary(
    name = "peakrdl",
    srcs = [
        "peakrdl.py",
    ],
    main = "peakrdl.py",
    deps = [
        ":current_system_rdl_peakrdl_toolchain",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//system_rdl:__pkg__"],
    deps = [
        "@rules_venv//python:defs_bzl",
    ],
)
