load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "verilator_process_wrapper",
    srcs = ["verilator_process_wrapper.cc"],
    copts = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["-std=c++17"],
    }),
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/cpp/runfiles"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//verilator:__pkg__"],
    deps = [
        "//verilog:verilog_info_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)
