load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//verilator:verilator_cc_library.bzl", "verilator_cc_library")
load("//verilog:verilog_library.bzl", "verilog_library")

# Basic register building block
verilog_library(
    name = "d_register",
    srcs = [
        "d_register.sv",
    ],
)

# Shift register (depends on d_register)
verilog_library(
    name = "shift_register",
    srcs = [
        "shift_register.sv",
    ],
    deps = [
        ":d_register",
    ],
)

# Serial-to-parallel converter (depends on shift_register, which transitively depends on d_register)
verilog_library(
    name = "serial_to_parallel",
    srcs = [
        "serial_to_parallel.sv",
    ],
    deps = [
        ":shift_register",
    ],
)

verilator_cc_library(
    name = "serial_to_parallel_verilator",
    module = ":serial_to_parallel",
)

cc_test(
    name = "serial_to_parallel_test",
    srcs = [
        "serial_to_parallel_test.cc",
    ],
    deps = [
        ":serial_to_parallel_verilator",
    ],
)
